syntax = "proto3";

package account;

service server {
    rpc register (account) returns (statusWithData) {
    }
    rpc login (account) returns (statusWithData) {
    }
    rpc modifyInfo (Info) returns (statusWithInfo) {
    }
    rpc getInfo (username) returns (Info) {
    }

}

message account {
    string username = 1;
    string password = 2;
}

message statusWithData {
    string is_registered = 1;
    string data = 2;
}

message Info {
    string username = 1;
    string password = 2;
    string nickname = 3;
    int32  age = 4;
    string gender = 5;
}

message username {
    string username = 1;
}

message statusWithInfo {
    string status = 1;
    Info info = 2;
}